--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -9,6 +9,8 @@
   <link rel="shortcut icon" href="{{ '/static/img/favicon.ico' | url }}" type="image/x-icon">
   <link rel="stylesheet" href="{{ '/static/css/main.css' | url }}" media="all">
 
+  <link href="https://unpkg.com/prismjs@1.20.0/themes/prism-okaidia.css" rel="stylesheet">
+  
 </head>
 <body>
   {% include 'components/navbar.njk' %}
