Added comment section to posts with utterances

--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -19,3 +19,12 @@ layout: layouts/base.njk
   <br><br>
   <a href="{{ '/' | url }}">&larr; Back home</a>
 </div>
+
+<script
+  async
+  src="https://utteranc.es/client.js"
+  repo="valarnet/valarnet-blog"
+  issue-term="title"
+  theme="github-light"
+  crossorigin="anonymous"
+></script>
