--- a/_includes/components/footer.njk
+++ b/_includes/components/footer.njk
@@ -1,3 +1,3 @@
 <footer class="footer">
-  &copy; {{ helpers.currentYear() }} - {{ site.meta.title }}
+  &copy; {{ helpers.currentYear() }} - {{ site.meta.title }} - {{ site.meta.theme }}
 </footer>
