--- a/static/css/main.css
+++ b/static/css/main.css
@@ -112,6 +112,7 @@ hr {
   justify-content: center;
   padding: 0.5rem 0;
   background: #f2f2f2;
+  color: #80007f;
 }
 body.dark .footer {
   background: #3d3d3d;
