--- a/stylus/abstracts/variables.styl
+++ b/stylus/abstracts/variables.styl
@@ -1,8 +1,8 @@
-primary_color = hsl(300,100%,25%)
+primary_color = hsl(190,100,34)
 text_color = hsl(0, 0%, 20%)
-bg_color = hsl(0, 0%, 100%)
+bg_color = hsl(0,0%,100%)
 
-primary_color_dark = hsl(270, 100%, 80%)
+primary_color_dark = hsl(190,100,34)
 text_color_dark = hsl(0, 0%, 100%)
 bg_color_dark = hsl(0, 0%, 20%)
 
