--- a/stylus/layout/footer.styl
+++ b/stylus/layout/footer.styl
@@ -4,7 +4,7 @@
   justify-content center
   padding 0.5rem 0
   background darken(bg_color, 5%)
-  color hsl(300,100%,25%)
+  color hsl(190,100,34)
 
   body.dark &
     background lighten(bg_color_dark, 5%)
