--- a/static/css/main.css
+++ b/static/css/main.css
@@ -83,11 +83,11 @@ small {
   }
 }
 a {
-  color: #0090ad;
+  color: #04c;
   text-decoration: none;
 }
 body.dark a {
-  color: #0090ad;
+  color: #d16500;
 }
 a:hover {
   text-decoration: underline;
@@ -112,7 +112,7 @@ hr {
   justify-content: center;
   padding: 0.5rem 0;
   background: #f2f2f2;
-  color: #0090ad;
+  color: #5c5c5c;
 }
 body.dark .footer {
   background: #3d3d3d;
