--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="{{ '/static/img/favicon.ico' | url }}" type="image/x-icon">
   <link rel="stylesheet" href="{{ '/static/css/main.css' | url }}" media="all">
 
-  <link href="https://unpkg.com/prismjs@1.20.0/themes/prism-okaidia.css" rel="stylesheet">
+  <link href="https://unpkg.com/prismjs@1.20.0/themes/prism-coy.css" rel="stylesheet">
   
 </head>
 <body>
