Reduced default font-size in code blocks 1em to 0.85em

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -12,6 +12,9 @@ body.dark {
   color: #fff;
   background-color: #333;
 }
+pre[class*="language-"]>code {
+  font-size: 0.85em;
+}
 img {
   width: 100%;
   height: auto;
